feat: refactor transaction event publisher (inject through parameter topic name -> paymentType because i needed to separate pain 001 from pain 008 in kafka topic).